--- a/public/theme/grayscale/css/styles.css
+++ b/public/theme/grayscale/css/styles.css
@@ -10207,7 +10207,7 @@ body {
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000000 100%), url("../../../img/founder.png");
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000000 100%), url("../../../assets/BG.png");
     background-position: center;
     background-attachment: scroll;
     background-size: contain;
